--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,18 +1,19 @@
 .App {
   text-align: center;
 }
-
+.body-font-styling {
+  font-size: 0.9em;
+  font-family: sans-serif;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,11 +24,9 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
 .App-link {
   color: #61dafb;
 }
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,25 +35,53 @@
     transform: rotate(360deg);
   }
 }
-
 nav + .container, nav + .container-fluid {
   margin-top: 20px;
-}
-
-table {
-  border-collapse: collapse;
-}
-
-.table-h-table-r {
-  border: 1px solid black;
-}
-.cell-highlight {
-  background-color: gold;
-  font-weight: bold;
 }
 .bold {
   font-weight: bold;
 }
 .red-text {
   color: red;
+}
+.styled-table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+.styled-input {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+.styled-table thead tr {
+  background-color: #009879;
+  color: #ffffff;
+  text-align: left;
+}
+.styled-table th,
+.styled-table td {
+  padding: 12px 15px;
+}
+.styled-table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+.styled-table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+.styled-table tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
+}
+.left {
+  position: absolute;
+}
+.table-title {
+  font-size: large;
+  font-family: monospace;
+  font-weight: bold;
 }
